--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,7 +3,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
 @theme inline {
+  /*Template pour une couleur personnalisée*/
+  /*--color-nomdevar: var(--nomDeVarDeclareDansRoot);*/
+  /*Template pour une var personnalisée*/
+  /*--nomdevar: var(--nomDeVarDeclareDansRoot);*/
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -42,6 +47,8 @@
 }
 
 :root {
+  /*--nomDeVarDeclareDansRoot: valeur de la variable (couleur, taille, etc...)*/
+  --warning: oklch(0.84 0.16 84);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -77,6 +84,7 @@
 }
 
 .dark {
+    --warning: oklch(0.41 0.11 46);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
