--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --font-base: "Inter", "sans-serif";
+}
 
 @theme inline {
   /*Template pour une couleur personnalisée*/
@@ -84,7 +88,7 @@
 }
 
 .dark {
-    --warning: oklch(0.41 0.11 46);
+  --warning: oklch(0.41 0.11 46);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -117,6 +121,21 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50 font-base;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+
+  h1 {
+    @apply text-3xl font-extrabold
+  }
+}
+
+/*---break---*/
 
 @layer base {
   * {
