--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -9,6 +9,7 @@
   /*--color-nomdevar: var(--nomDeVarDeclareDansRoot);*/
   /*Template pour une var personnalisée*/
   /*--nomdevar: var(--nomDeVarDeclareDansRoot);*/
+  --color-actif: #40C0E2;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -48,7 +49,6 @@
 
 :root {
   /*--nomDeVarDeclareDansRoot: valeur de la variable (couleur, taille, etc...)*/
-  --warning: oklch(0.84 0.16 84);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -84,7 +84,6 @@
 }
 
 .dark {
-    --warning: oklch(0.41 0.11 46);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
