--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -133,6 +133,14 @@
     @apply text-3xl font-extrabold
   }
 
+  h2 {
+    @apply text-xl font-bold
+  }
+
+  h3 {
+    @apply text-lg font-bold
+  }
+
   .container {
     @apply px-8 py-12 flex flex-col gap-4;
   }
